# PyTest_learning

./: README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
lections/L3/: l3.md
lections/L4/: order.py
lections/L5/: discount.py
lections/L7/: notifications.py  report.py  weather.py
lections/L8/config/: settings.py  urls.py
lections/L8/shop/: admin.py  models.py  urls.py  views.py
lections/L8/shop/migrations/: 0001_initial.py
lections/L8/shop/templates/shop/: product_detail.html  product_list.html
lections/L8/tests/: conftest.py  test_models.py  test_views.py
lections/L9/: pyproject.toml
lections/L9/api/: main.py  models.py  storage.py
lections/L9/tests/: conftest.py  test_api.py
src/: l1_example.py  l2_calculator.py  l6_cart.py
tests/: conftest.py  test_calculator.py  test_l2_calculator.py  test_l3_example.py  test_l4_order.py  test_l5_discount.py  test_l6_cart.py  test_l7_notifications.py  test_l7_report.py  test_l7_weather.py  test_order.py
