[project]
name = "pytest-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
DJANGO_SETTINGS_MODULE = "config.settings"
markers = [
    "fast: быстрые тесты (без внешних зависимостей)",
    "slow: медленные тесты (база данных, сеть)",
    "smoke: базовые тесты для проверки работоспособности",
]

addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]